5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1684_1103.log
== TEST (2019-04-22 19:46:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo" a,",", b)
else:
	print(x, "nao pertence ao intervalo" a, ",", b)
-- ERROR:
File "XXXX", line 10
    print (x, "pertence ao intervalo" a,",", b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:48:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo ",a,",",b)
else:
	print(x, "nao pertence ao intervalo ",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:48:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo ",a,",",b)
else:
	print(x, "nao pertence ao intervalo ",a,",",b)
-- EXECUTION TIME:
0.163027
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo  3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo  1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:48:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo ",a,",",b)
else:
	print(x, "nao pertence ao intervalo ",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo  3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:49:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.283059
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:51:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:51:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.131812
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:40:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:41:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:42:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:44:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a","b)
else:
	print(x, "nao pertence ao intervalo",a","b)
-- ERROR:
File "XXXX", line 10
    print (x, "pertence ao intervalo",a","b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:44:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,","b)
else:
	print(x, "nao pertence ao intervalo",a,","b)
-- ERROR:
File "XXXX", line 10
    print (x, "pertence ao intervalo",a,","b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:44:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print(x, "nao pertence ao intervalo",a,",",b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:52:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)
elif (b <= a):
	print("Entradas a e b invalidas")
-- ERROR:
File "XXXX", line 11
    elif (b <= a):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:53:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:54:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- EXECUTION TIME:
0.190106
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:54:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if ((x >= a) and (x <= b)):
	print (x, "pertence ao intervalo",a,",",b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:47:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((a <= x) and (b >= x)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- EXECUTION TIME:
0.202971
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:52:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:52:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:54:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b) and (b > a)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- EXECUTION TIME:
0.217802
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:54:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas a e b invalidas")
elif ((x >= a) and (x <= b) and (b > a)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:22:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas", a,"e", b, "invalidas")
elif ((x >= a) and (x <= b) and (b > a)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:23:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas", a,"e", b, "invalidas")
elif ((x >= a) and (x <= b) and (b > a)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:23:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("escreva o nr real x: "))
a = float(input("escreva o nr real a: "))
b = float(input("escreva o nr real b: "))
if (b <= a):
	print ("Entradas", a,"e", b, "invalidas")
elif ((x >= a) and (x <= b) and (b > a)):
	print(x, "pertence ao intervalo",a,",",b)
else:
	print (x, "nao pertence ao intervalo",a,",",b)

-- EXECUTION TIME:
0.137703
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
